<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developer.albert.datospersonales.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <TextView
            android:text="@string/confirmar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/title_1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/confirmar_datos_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_right"
                android:paddingBottom="@dimen/espacio_entre_detalles"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtNombreCompleto"
                android:text="@string/confirmar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/espacio_entre_detalles"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/confirmar_datos_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_right"
                android:paddingBottom="@dimen/espacio_entre_detalles"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtFechaNacimiento"
                android:text="@string/confirmar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/espacio_entre_detalles"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/confirmar_datos_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_right"
                android:paddingBottom="@dimen/espacio_entre_detalles"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtTelefono"
                android:text="@string/confirmar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/espacio_entre_detalles"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/confirmar_datos_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_right"
                android:paddingBottom="@dimen/espacio_entre_detalles"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtEmail"
                android:text="@string/confirmar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/espacio_entre_detalles"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/confirmar_datos_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_right"
                android:paddingBottom="@dimen/espacio_entre_detalles"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtDescripcion"
                android:text="@string/confirmar_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MiBotonRaised"
            android:text="@string/btn_editar"
            android:onClick="EditarDatos"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
